Fix vuepress config
Addresses https://github.com/payjoin/payjoindevkit.org/issues/7
and removes leftover references to LDK

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "payjoindevkit.org",
   "version": "0.0.1",
   "description": "Payjoin Dev Kit Documentation",
-  "author": "Lightning Dev Kit",
+  "author": "Payjoin Dev Kit",
   "license": "MIT",
   "bugs": "https://github.com/payjoin/payjoindevkit.org/issues",
   "homepage": "https://payjoindevkit.org",
