--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
   },
   "devDependencies": {
     "@spiralbtc/vuepress-devkit-theme": "^0.5.0",
-    "broken-link-checker": "^0.6.7",
-    "serve": "^14.2.4",
-    "start-server-and-test": "^2.0.11",
-    "vuepress": "^1.8.3"
+    "broken-link-checker": "0.7.8",
+    "serve": "14.0.1",
+    "start-server-and-test": "1.14.0",
+    "vuepress": "1.9.7"
   }
 }
